@@ -1,3 +1,7 @@
+2017-12-18  Michael Scholz  <mi-scholz@users.sourceforge.net>
+
+	* examples/site-lib/clm.fs (sound-let): Some bugs fixed.
+
 2017-12-16  Michael Scholz  <mi-scholz@users.sourceforge.net>
 
 	* examples/fth-lib/fth.fs (stack-check): New function.
